Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.2
-
None
-
Windows 7
-
151dd9c67cd60ea72d89fe9a82937f008b6e2ac8
Description
Drawing rotated text is not working with some fonts. When the painter is trying to draw the text the warning âQWinFontEngine: unable to query transformed glyph metrics..." is shown several times because the GetGlyphOutline() function fails in QWindowsFontEngine::drawGDIGlyph().
Attached an application that reproduces the issue. The same code worked in Qt 4.8.4.
Attachments
Issue Links
- relates to
-
QTBUG-28264 tst_qglthreads has some issues with desktop OpenGL on Windows 7 (Desktop OpenGL only)
-
- Closed
-