src/plugins/platforms/windows/qwindowsfontengine.h
@@ -407,6 +407,14 @@ argument|qreal pixelSize
 argument_list|)
 specifier|const
 block|;
+name|virtual
+name|bool
+name|supportsTransformation
+argument_list|(
+argument|const QTransform&transform
+argument_list|)
+specifier|const
+block|;
 ifndef|#
 directive|ifndef
 name|Q_CC_MINGW
